Update styling, fix padding and solve left panel scrollbar

--- a/src/_client.scss
+++ b/src/_client.scss
@@ -158,7 +158,7 @@ svg.timeslider,
 
 .side-panel-content {
     background: $c_lo;
-    padding: 12px 12px 8px 12px !important;
+    padding: 12px !important;
 
     .panel {
         background: #ebebeb;
@@ -348,13 +348,13 @@ input {
 .search-result-view .btn.select-all {
   position: relative;
   width: 100%;
+  margin-bottom: 0px;
 }
 
 .download-control {
   position: absolute;
   width: calc(100% - 24px);
-  bottom: 12px;
-  margin-bottom: 3px;
+  bottom: 14px;
 }
 
 
@@ -500,7 +500,6 @@ input,
 }
 
 .layer-control {
-    padding-right: 8px;
     .layer-list {
         label,.form-control {
             color: $c_green;
@@ -923,8 +922,6 @@ body {
 }
 
 .filters-view {
-  padding-right: 8px;
-  margin-right: 0px;
   overflow-y: auto;
 }
 
